Fix alignment Add footer w/ src

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,7 +4,6 @@
     right: 0;
     top: 0;
     bottom: 0;
-    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,6 +15,8 @@
     width: 100%;
     height: 2.5rem;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 body.bg {
@@ -30,12 +31,19 @@ body.bg {
     font-size: 40px;
 }
 
-.link {
+.index_link {
     color: #FFFFFF;
     text-align: left;
     margin-left: 70px;
     font-family: "Lucida Console", "Courier New", monospace;
     font-size: 20px;
+}
+
+.footer_link {
+    color: #FFFFFF;
+    text-align: center;
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 17px;
 }
 
 div.index {
